--- a/WeatherTest/Views/WeatherDetail.xaml
+++ b/WeatherTest/Views/WeatherDetail.xaml
@@ -1,5 +1,14 @@
-﻿<?xml version="1.0" encoding="UTF-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="WeatherTest.Views.WeatherDetail">
 	<ContentPage.Content>
+        <StackLayout>
+            <TableView Intent="Settings">
+                <TableView.Root>
+                    <TableSection>
+                        <SwitchCell Text="Teste"></SwitchCell>
+                    </TableSection>
+                </TableView.Root>
+            </TableView>
+        </StackLayout>
 	</ContentPage.Content>
 </ContentPage>
